--- a/src/index.html
+++ b/src/index.html
@@ -32,9 +32,9 @@
     crossorigin="anonymous"></script>
 
   <script>
-    window.fbAsyncInit = function () {
+    /*window.fbAsyncInit = function () {
       FB.init({
-        appId: '1846296995899373',
+        appId: 'XYZ',
         cookie: true,
         xfbml: true,
         version: 'v21.0'
@@ -50,7 +50,7 @@
       js = d.createElement(s); js.id = id;
       js.src = "https://connect.facebook.net/en_US/sdk.js";
       fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));
+    }(document, 'script', 'facebook-jssdk'));*/
   </script>
 </body>
 
