--- a/src/index.html
+++ b/src/index.html
@@ -32,17 +32,17 @@
     crossorigin="anonymous"></script>
 
   <script>
-    window.fbAsyncInit = function () {
-      FB.init({
-        appId: '1846296995899373',
-        cookie: true,
-        xfbml: true,
-        version: 'v21.0'
-      });
+    // window.fbAsyncInit = function () {
+    //   FB.init({
+    //     appId: 'XYZ',
+    //     cookie: true,
+    //     xfbml: true,
+    //     version: 'v21.0'
+    //   });
 
-      FB.AppEvents.logPageView();
+    //   FB.AppEvents.logPageView();
 
-    };
+    // };
 
     (function (d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
