--- a/src/index.html
+++ b/src/index.html
@@ -32,17 +32,17 @@
     crossorigin="anonymous"></script>
 
   <script>
-    // window.fbAsyncInit = function () {
-    //   FB.init({
-    //     appId: 'XYZ',
-    //     cookie: true,
-    //     xfbml: true,
-    //     version: 'v21.0'
-    //   });
+    window.fbAsyncInit = function () {
+      FB.init({
+        appId: 'XYZ',
+        cookie: true,
+        xfbml: true,
+        version: 'v21.0'
+      });
 
-    //   FB.AppEvents.logPageView();
+      FB.AppEvents.logPageView();
 
-    // };
+    };
 
     (function (d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
@@ -50,7 +50,7 @@
       js = d.createElement(s); js.id = id;
       js.src = "https://connect.facebook.net/en_US/sdk.js";
       fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));*/
+    }(document, 'script', 'facebook-jssdk'))
   </script>
 </body>
 
