--- a/src/assets/config/home.html
+++ b/src/assets/config/home.html
@@ -22,8 +22,6 @@
           &nbsp;&nbsp;
           <a href="/verify"><span class="fs-12 font-weight-bold lang-btn nav-link-color">SIGN IN</span>
           </a> &nbsp;&nbsp;
-          <a href="/graph-dashboard"><span class="fs-12 font-weight-bold lang-btn nav-link-color">SIGN UP</span>
-          </a> &nbsp;&nbsp;
           <a href="/login"><span
               class="mb-none fs-12 font-weight-bold lang-btn nav-link-color btn btn-bg btn-sec-bg">VERIFY
               CERTIFICATE</span>
@@ -169,4 +167,5 @@
     </div>
   </div>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-pzjw8f+ua7Kw1TIq0w5d6pOCilO6U5vWj0vZOJ3BCsw2P0p/WeI3pZVmF5Mr9QAB" crossorigin="anonymous"></script>
