--- a/src/assets/config/home.html
+++ b/src/assets/config/home.html
@@ -4,6 +4,7 @@
     <div class="navbar-brand d-contents" id="navbarExample01">
       <div class="nav-item active logo-text d-flex">
         <img class="ml-2" src="assets/images/Digi-logo.png" />
+        <img class="ml-2" src="assets/images/Digi-logo.png" />
         <div class="fs-12 font-weight-bold lang-btn nav-link-color ml-4">ADMIN,</div>
       </div>
       <!-- <div>
@@ -21,8 +22,7 @@
 
           &nbsp;&nbsp;
           <a href="/verify"><span class="fs-12 font-weight-bold lang-btn nav-link-color">SIGN IN</span>
-          </a> &nbsp;&nbsp;
-          <a href="/graph-dashboard"><span class="fs-12 font-weight-bold lang-btn nav-link-color">SIGN UP</span>
+          <a href="/verify"><span class="fs-12 font-weight-bold lang-btn nav-link-color">SIGN IN</span>
           </a> &nbsp;&nbsp;
           <a href="/login"><span
               class="mb-none fs-12 font-weight-bold lang-btn nav-link-color btn btn-bg btn-sec-bg">VERIFY
@@ -37,10 +37,23 @@
 <div class="container-fluid p-0">
   <!-- Content in Green -->
   <div class="row">
+  <div class="row">
     <div class="content-green">
       <div class="col-6 left-sec">
         <div class="fs-40 p-0-48 fw-600">School Certificate Generation and Verification Platform</div>
         <div class="number-align mt-81 p-0-48">
+          <div class="d-flex dflex-dc-column">
+            <div class="fs-30 fw-500">5K+</div>
+            <div class="tr-gr-clr">Schools Enrolled</div>
+          </div>
+          <div class="d-flex dflex-dc-column">
+            <div class="fs-30 fw-500">100K+</div>
+            <div class="tr-gr-clr">Certificates Generated</div>
+          </div>
+          <div class="d-flex dflex-dc-column">
+            <div class="fs-30 fw-500">50K+</div>
+            <div class="tr-gr-clr">Students Certified</div>
+          </div>
           <div class="d-flex dflex-dc-column">
             <div class="fs-30 fw-500">5K+</div>
             <div class="tr-gr-clr">Schools Enrolled</div>
@@ -59,6 +72,7 @@
       <div class="col-6 right-sec">
         <div class="d-flex dflex-dc-column align-center">
           <img class="ml-2" src="assets/images/Mask.png" />
+          <img class="ml-2" src="assets/images/Mask.png" />
 
         </div>
       </div>
@@ -66,6 +80,7 @@
     </div>
   </div>
 
+  <!-- Cards Admin Student  -->
   <!-- Cards Admin Student  -->
   <div class="row d-flex justify-content-center bg-beige mb-3 h-702">
     <div class="d-flex dflex-dc-column align-items-center justify-content-center mt-81">
@@ -79,7 +94,21 @@
           <div class="fs-16">Student</div>
           <div class="clr-gr fs-14">View and Download your certificate</div>
           <div> <a href="/login" class="clr-grn">Create Account</a></div>
+      <div class="col-md-4 mb-3 d-flex align-items-center justify-content-center">
+        <div class="lp-card">
+          <div><img src="assets/images/student.svg" alt=""></div>
+          <div class="fs-16">Student</div>
+          <div class="clr-gr fs-14">View and Download your certificate</div>
+          <div> <a href="/login" class="clr-grn">Create Account</a></div>
 
+        </div>
+      </div>
+      <div class="col-md-4 mb-3 d-flex align-items-center justify-content-center">
+        <div class="lp-card">
+          <div><img src="assets/images/examiner.svg" alt=""></div>
+          <div class="fs-16">Examiners</div>
+          <div class="clr-gr fs-14">Verify a schools & certificate </div>
+          <div> <a href="/login" class="clr-grn">Create Account</a></div>
         </div>
       </div>
       <div class="col-md-4 mb-3 d-flex align-items-center justify-content-center">
@@ -106,6 +135,15 @@
 
 
   <div class="accordion" id="accordionExample">
+    <div class="card">
+      <div class="card-header" id="headingOne">
+        <h5 class="mb-0">
+          <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
+            aria-expanded="true" aria-controls="collapseOne">
+            Collapsible Group Item #1
+          </button>
+        </h5>
+      </div>
     <div class="card">
       <div class="card-header" id="headingOne">
         <h5 class="mb-0">
@@ -169,4 +207,5 @@
     </div>
   </div>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-pzjw8f+ua7Kw1TIq0w5d6pOCilO6U5vWj0vZOJ3BCsw2P0p/WeI3pZVmF5Mr9QAB" crossorigin="anonymous"></script>
